--- a/requirements.txt
+++ b/requirements.txt
@@ -3,17 +3,18 @@ certifi==2022.9.24
 click==8.1.3
 cloudinary==1.30.0
 colorama==0.4.6
+cryptography==41.0.7
 Flask==2.2.2
 Flask-Admin==1.6.0
 Flask-BabelEx==0.9.4
 Flask-Login==0.6.2
+flask_socketio==5.3.4
 Flask-SQLAlchemy==3.0.2
-flask-swagger-ui==3.36.0
-greenlet==2.0.1
 importlib-metadata==5.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+mysql-connector-python==8.2.0
 PyMySQL==1.0.2
 pytz==2022.6
 six==1.16.0
