--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -48,6 +48,20 @@ services:
     networks:
       - mysql-docker-project-network
 
+  nginx-docker-project-container:
+    image: nginx:latest
+    container_name: nginx-docker-project-container
+    ports:
+      - 443:443
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./key.pem:/root/ssl/key.pem
+      - ./cert.pem:/root/ssl/cert.pem
+    depends_on:
+      - flask-docker-project-container
+    networks:
+      - mysql-docker-project-network
+
 networks:
   mysql-docker-project-network:
     name: mysql-docker-project-network
